# wgpu_segfault

./: Cargo.toml  README.md
src/: device_manager.rs  main.rs
